--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "App": {
+    "UrlService": "https://recruiting-api.newshore.es/api/flights"
+  }
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -6,4 +9,5 @@
     }
   },
   "AllowedHosts": "*"
+
 }
